// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`find FeatureMeasurement and Values find Amplitude feature measurement and value 1`] = `
{
  "channel": {
    "effectiveAt": 1636503404,
    "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
  },
  "featureMeasurementType": "AMPLITUDE_A5_OVER_2",
  "measuredChannelSegment": {
    "id": {
      "channel": {
        "effectiveAt": 1636503404,
        "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
      },
      "creationTime": 1636503404,
      "endTime": 1636503704,
      "startTime": 1636503404,
    },
  },
  "measurementValue": {
    "amplitude": {
      "standardDeviation": 0.5,
      "units": "MAGNITUDE",
      "value": 5,
    },
    "clipped": false,
    "measurementTime": 1636503404,
    "measurementWindowDuration": 6,
    "measurementWindowStart": 1636503404,
    "period": 0.25,
  },
  "snr": {
    "standardDeviation": null,
    "units": "DECIBELS",
    "value": 8.9939442,
  },
}
`;

exports[`find FeatureMeasurement and Values find Amplitude feature measurement and value 2`] = `
{
  "amplitude": {
    "standardDeviation": 0.5,
    "units": "MAGNITUDE",
    "value": 5,
  },
  "clipped": false,
  "measurementTime": 1636503404,
  "measurementWindowDuration": 6,
  "measurementWindowStart": 1636503404,
  "period": 0.25,
}
`;

exports[`find FeatureMeasurement and Values find ArrivalTime feature measurement and value 1`] = `
{
  "analysisWaveform": {
    "filterDefinition": undefined,
    "filterDefinitionUsage": undefined,
    "waveform": {
      "id": {
        "channel": {
          "effectiveAt": 1636503404,
          "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
        },
        "creationTime": 1636503404,
        "endTime": 1636503704,
        "startTime": 1636503404,
      },
    },
  },
  "channel": {
    "effectiveAt": 1636503404,
    "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
  },
  "featureMeasurementType": "ARRIVAL_TIME",
  "measuredChannelSegment": {
    "id": {
      "channel": {
        "effectiveAt": 1636503404,
        "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
      },
      "creationTime": 1636503404,
      "endTime": 1636503704,
      "startTime": 1636503404,
    },
  },
  "measurementValue": {
    "arrivalTime": {
      "standardDeviation": 1.162,
      "value": 1636503404,
    },
    "travelTime": null,
  },
  "snr": {
    "standardDeviation": null,
    "units": "DECIBELS",
    "value": 8.9939442,
  },
}
`;

exports[`find FeatureMeasurement and Values find ArrivalTime feature measurement and value 2`] = `
{
  "arrivalTime": {
    "standardDeviation": 1.162,
    "value": 1636503404,
  },
  "travelTime": null,
}
`;

exports[`find FeatureMeasurement and Values find Azimuth feature measurement and value 1`] = `
{
  "analysisWaveform": {
    "filterDefinition": undefined,
    "filterDefinitionUsage": undefined,
    "waveform": {
      "id": {
        "channel": {
          "effectiveAt": 1636503404,
          "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
        },
        "creationTime": 1636503404,
        "endTime": 1636503704,
        "startTime": 1636503404,
      },
    },
  },
  "channel": {
    "effectiveAt": 1636503404,
    "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
  },
  "featureMeasurementType": "RECEIVER_TO_SOURCE_AZIMUTH",
  "measuredChannelSegment": {
    "id": {
      "channel": {
        "effectiveAt": 1636503404,
        "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
      },
      "creationTime": 1636503404,
      "endTime": 1636503704,
      "startTime": 1636503404,
    },
  },
  "measurementValue": {
    "measuredValue": {
      "standardDeviation": 2.2089042,
      "units": "DEGREES",
      "value": 90.142121,
    },
    "referenceTime": null,
  },
  "snr": null,
}
`;

exports[`find FeatureMeasurement and Values find Azimuth feature measurement and value 2`] = `
{
  "measuredValue": {
    "standardDeviation": 2.2089042,
    "units": "DEGREES",
    "value": 90.142121,
  },
  "referenceTime": null,
}
`;

exports[`find FeatureMeasurement and Values find Emergence Angle feature measurementvalue 1`] = `
{
  "measuredValue": {
    "standardDeviation": null,
    "units": "DEGREES",
    "value": -1,
  },
  "referenceTime": null,
}
`;

exports[`find FeatureMeasurement and Values find LongPeriodFirstMotionFeatureMeasurementValue 1`] = `
{
  "confidence": null,
  "referenceTime": 1636503404,
  "value": "INDETERMINATE",
}
`;

exports[`find FeatureMeasurement and Values find Phase feature measurement and value 1`] = `
{
  "channel": {
    "effectiveAt": 1636503404,
    "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
  },
  "featureMeasurementType": "PHASE",
  "measuredChannelSegment": {
    "id": {
      "channel": {
        "effectiveAt": 1636503404,
        "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
      },
      "creationTime": 1636503404,
      "endTime": 1636503704,
      "startTime": 1636503404,
    },
  },
  "measurementValue": {
    "confidence": 50,
    "referenceTime": 1636503404,
    "value": "P",
  },
  "snr": null,
}
`;

exports[`find FeatureMeasurement and Values find Phase feature measurement and value 2`] = `
{
  "confidence": 50,
  "referenceTime": 1636503404,
  "value": "P",
}
`;

exports[`find FeatureMeasurement and Values find Rectilinearity feature measurementvalue 1`] = `
{
  "measuredValue": {
    "standardDeviation": null,
    "units": "UNITLESS",
    "value": -1,
  },
  "referenceTime": null,
}
`;

exports[`find FeatureMeasurement and Values find ShortPeriodFirstMotionFeatureMeasurementValue 1`] = `
{
  "confidence": null,
  "referenceTime": 1636503404,
  "value": "INDETERMINATE",
}
`;

exports[`find FeatureMeasurement and Values find Slowness feature measurement and value 1`] = `
{
  "channel": {
    "effectiveAt": 1636503404,
    "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
  },
  "featureMeasurementType": "SLOWNESS",
  "measuredChannelSegment": {
    "id": {
      "channel": {
        "effectiveAt": 1636503404,
        "name": "ASAR.beam.SHZ/beam,fk,coherent/steer,az_90.142deg,slow_7.122s_per_deg/06c0cb24-ab8f-3853-941d-bdf5e73a51b4",
      },
      "creationTime": 1636503404,
      "endTime": 1636503704,
      "startTime": 1636503404,
    },
  },
  "measurementValue": {
    "measuredValue": {
      "standardDeviation": 0.27,
      "units": "SECONDS_PER_DEGREE",
      "value": 7.1219535,
    },
    "referenceTime": null,
  },
  "snr": null,
}
`;

exports[`find FeatureMeasurement and Values find Slowness feature measurement and value 2`] = `
{
  "measuredValue": {
    "standardDeviation": 0.27,
    "units": "SECONDS_PER_DEGREE",
    "value": 7.1219535,
  },
  "referenceTime": null,
}
`;
